// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game context snapshots should perform sequence 0 correctly for sgf1 1`] = `
"
Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b w w w b . . . . . b w . . 
. . . w . w w b w b . . . . . b w . . 
. . . . . . . b b b . . . . . b w . . 
. . w . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . b . . . . . . . . . . . w b . . . 
. . . . . . . . . . . . . . b w w . . 
. . . . . . . . . . . . . . . . . . . 
. . . b . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . w w . . 
. . w . . . . . . . . . . . b . b . . 
. . . w . w . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 0 correctly for sgf2 1`] = `
"
Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 1
White: 0

Board:
. . b . . . . . . . . . . . . . . . . 
. b b b . . . . . . . . . . . . . . . 
. w b w . b . . . . . . . w . w w w . 
. w b w . . . . . . . . . . b b b w . 
. w b w . . . . . . . . . . . . b b . 
. b w b w . . . . . . . . . . . w . . 
. w w . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . w . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . w . . b . . . . w b . b . . 
. . . . . b . . . . . . . . b . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 0 correctly for sgf3 1`] = `
"
Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 3
White: 2

Board:
. . . . b . . . . 
. . w b . b . . . 
b b b b . . b b . 
. w b b b b w b . 
w w w b w w w b . 
. w b b w . w b . 
. w b . . w b b . 
. w b . w . w b . 
. w . . . . w . . 
"
`;

exports[`Game context snapshots should perform sequence 1 correctly for sgf1 1`] = `
"
Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 19
White: 7

Board:
. . . . . . w b b b . b b b w . w . . 
. . . . . . . w b b b . . b w w . w . 
. . . . . b w w w b b b b w w b w . . 
. . . w w w w b w b . w w b b b w w . 
. w . w b w b b b b . w b . b b w b . 
w . w b b w b w . b . w b w . b b w . 
b w w b w w w w b . b b b . b b b w . 
b b w b b b b b . b w b b b w b w w w 
. b b . . . . b . b w b w w w b b b w 
. . b . . . . b b w w w w . w b b b b 
. . . . . . . . . b w . . b b w w w w 
. b . . . . . . . b w w w . b . w . . 
b . b b . . b b . w b w b b b b b w . 
w b b b b b . b w b b b b w w . w w . 
w w w b w w b b b w w . b w w w w . . 
. . w w . w b w b w w b b w b w . w . 
. . . w . w w w w w b b . b b b w . . 
. . . . . . . . . w w b . . b w w . . 
. . . . . . . . . w b b b b . w . . . 
"
`;

exports[`Game context snapshots should perform sequence 1 correctly for sgf2 1`] = `
"
Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 4
White: 6

Board:
. . b . . . . w . . w . . . . . . . . 
. b b b b w w . w w b w w . w . . . . 
. w b w w b w w b b b b b w b w w w . 
. w b w . b b b b . b b w w b b b w w 
. w b w . b . b . b w w w b . . b b b 
. b w w w b w . b w . w b . b . w w . 
. w w w b w w . b w w w b b . . . . . 
w . . w b . . . . b w b . w b b . b b 
b w . w b . . . . . b b . w w . b b w 
b b w w b . . b . . . . b b b b w w w 
. . b b b b b b b b b b w w w b w . . 
b b b . b w b w w w w w . b w w w w . 
b w w w b w w . w . w . . w b b b w w 
w w . w . w . w b b w . . w w b b b w 
. . . . w . w w b . w . . w b . b w w 
. . . w w w b b b . w w . w b . b b b 
. . . . w b . . . b w b w w b . . . . 
. . w . w b . b . b b b w b b . . . . 
. . . w b b . . . . b w w w b . . . . 
"
`;

exports[`Game context snapshots should perform sequence 1 correctly for sgf3 1`] = `
"
Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 3
White: 2

Board:
. . . . b . . . . 
. . w b . b . . . 
b b b b . . b b . 
b w b b b b w b . 
w w w b w w w b . 
. w b b w . w b . 
. w b b w w b b . 
. w b w w . w b b 
. w b b w . w w w 
"
`;

exports[`Game context snapshots should perform sequence 2 correctly for sgf1 1`] = `
"
Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b w w w b . . . . . b w . . 
. . . w . w w b w b . . . . . b w . . 
. . . . . . . b b b . . . . . b w . . 
. . w . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . b . . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . w w . . 
. . . . . . . . . . . . . . . . . . . 
. . . b . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . w w . . 
. . w . . . . . . . . . . . b . b . . 
. . . w . w . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 2 correctly for sgf2 1`] = `
"
Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 1
White: 0

Board:
. . b . . . . . . . . . . . . . . . . 
. b b b . . . . . . . . . . . . . . . 
. w b w . b . . . . . . . w . w w w . 
. w b w . . . . . . . . . . b b b w . 
. w b w . . . . . . . . . . . . b b . 
. b w b w . . . . . . . . . . . w . . 
. w w . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . w . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . b . . . . w b . b . . 
. . . . . b . . . . . . . . b . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 2 correctly for sgf3 1`] = `
"
Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 0
White: 1

Board:
. . . . b . . . . 
. . w b w b . . . 
. b b b w w b b . 
. w . b . . w b . 
w . w b w . w b . 
. w b b w b w b . 
. w b . . w b b . 
. w b . w . w . . 
. . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 3 correctly for sgf1 1`] = `
"
Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . . . . . 
. . w . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 3 correctly for sgf2 1`] = `
"
Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . w . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . b . . . . . . . . . . 
. . . . . b . . . . . . . . b . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 3 correctly for sgf3 1`] = `
"
Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . 
. . w b w b . . . 
. . b . w w b b . 
. . . . . . w b . 
. . . . . . . . . 
. . . . . . . . . 
. . b . . . b . . 
. . . . . . . . . 
. . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 4 correctly for sgf1 1`] = `
"
Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . w . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . . . . . 
. . w . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 4 correctly for sgf2 1`] = `
"
Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . w . . 
. . . w . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . w . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . b . . . . . . . . . . 
. . . . . b . . . . . . . . b . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 4 correctly for sgf3 1`] = `
"
Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . 
. . w b w b . . . 
. . b b w w b b . 
. . . . . . w b . 
. . . . . . . . . 
. . . . . . . . . 
. . b . . . b . . 
. . . . . . . . . 
. . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 5 correctly for sgf1 1`] = `
"
Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b . w . . . . . . . b w . . 
. . . w . . . b . b . . . . . b w . . 
. . . . . . . . . . . . . . . b w . . 
. . w . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . b . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . w . . 
. . . . . . . . . . . . . . . . . . . 
. . . b . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . w w . . 
. . w . . . . . . . . . . . b . b . . 
. . . w . w . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 5 correctly for sgf2 1`] = `
"
Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . . . . . . . . . . . 
. b w . . . . . . . . . . . . . . . . 
. . b w . . . . . . . . . w . w w w . 
. . b w . . . . . . . . . . b b b w . 
. . b w . . . . . . . . . . . . b b . 
. b w . . . . . . . . . . . . . w . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . w . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . b . . . . w b . b . . 
. . . . . b . . . . . . . . b . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should perform sequence 5 correctly for sgf3 1`] = `
"
Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 0
White: 1

Board:
. . . . b . . . . 
. . w b w b . . . 
. b b b w w b b . 
. w . b . . w b . 
w . w b w . w b . 
. w b b . . w b . 
. w b . . w b b . 
. . . . w . w . . 
. . . . . . . . . 
"
`;

exports[`Game context snapshots should render 50 moves from the end correctly for sgf1 1`] = `
"
Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 9
White: 3

Board:
. . . . . . w . w . . b b b w . w . . 
. . . . . . . w b b b . . b w w . w . 
. . . . . b w w w b b b b w w b w . . 
. . . w . w w b w b . w w b b b w . . 
. w . w . . . b b b . w b . b b w . . 
. . w b . w . . . . . w b w . b b w . 
. w w b . w w . b w b b b . b b b w . 
. b w b . b b b . b w b b b w b w w . 
. b b . . . . b . b w b w w w b b . . 
. . b . . . . b b w w w w . w b b b b 
. . . . . . . . . b w . . b b w w w w 
. b . . . . . . . b w w w . b . . . . 
b . . b . . b b . w b w b b . b b w . 
w b b b b b . b w b b b . . . . . w . 
w w w b w w b b b w . . b w w w w . . 
. . w w . w b w b w . . b w b w . w . 
. . . w . w w w w . . b w b b b w . . 
. . . . . . . . . w . b w w b . w . . 
. . . . . . . . . . . . . b . . . . . 
"
`;

exports[`Game context snapshots should render 50 moves from the end correctly for sgf2 1`] = `
"
Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 3
White: 5

Board:
. . b . . . . w . . w . . . . . . . . 
. b b b b w w . w w b w w . . . . . . 
. w b w w b w w b b b b . w . w w w . 
. w b w . b b b b . . . w . b b b w . 
. w b w . b . b . b w . w b . . b b b 
. b w . w b w . b w . w b . b . w w . 
. w w w b w w . b w w . b b . . . . . 
. . . . b . . . . b . . . w b b . b b 
. w . w b . . . . . . b . w w . b b w 
. b . w b . . b . . . . b b b b . w w 
. . . . b . b . b . b . w w w b w . . 
b b b . b . . w . w w w . b w w w w . 
b w w . . . w . w . w . . . . b b w . 
w w . w . w . w b . . . . w . . b b w 
. . . . w . w w b . w . . . . . b w . 
. . . w w w b b b . w w . w b . b . . 
. . . . w b . . . b w b w w b . . . . 
. . w . w b . b . b b b w b b . . . . 
. . . w b b . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should render 50 moves from the end correctly for sgf3 1`] = `
"
Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . 
. . . . . . . . . 
. . b . . w b b . 
. . . . . . w b . 
. . . . . . . . . 
. . . . . . . . . 
. . b . . . b . . 
. . . . . . . . . 
. . . . . . . . . 
"
`;

exports[`Game context snapshots should render move 50 correctly for sgf1 1`] = `
"
Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 0
White: 0

Board:
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . b w w w b . . . . . b w . . 
. . . w . w w b w b . . . . . b w . . 
. . . . . . . b b b . . . . . b w . . 
. . w . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . . b w . 
. . . . . . . . . . . . . . . b . . . 
. . . . . . . . . . . . . . w . b . . 
. . b . . . . . . . . . w . w b . . . 
. . . . . . . . . . . . . . b w w . . 
. . . . . . . . . . . . . . b . . . . 
. . . b . . . . . . . . . . . . b w . 
. . b . . . . . . . . . . . . . . . . 
. . w b . . . . . . . . . . . w w . . 
. . w . . . . . . . . . . . b . b . . 
. . . w . w . . . . . . . . . b . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should render move 50 correctly for sgf2 1`] = `
"
Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 1
White: 0

Board:
. . b . . . . . . . . . . . . . . . . 
. b b b . . . . . . . . . . . . . . . 
. w b w . b . . . . . . . w . w w w . 
. w b w . . . . . . . . . . b b b w . 
. w b w . . . . . . . . . . . . b b . 
. b w b w . . . . . . . . . . . w . . 
. w w . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . b . . 
. . . . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . b . . . . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
. . . w . . . . . . . . . w . . . . . 
. . . . . b w . . . . . . . . . . . . 
. . . w w w b . b . . . . w b . b . . 
. . . . w b . . . . . . . . b . . . . 
. . . . . b . . . . . . . . . . . . . 
. . . . . . . . . . . . . . . . . . . 
"
`;

exports[`Game context snapshots should render move 50 correctly for sgf3 1`] = `
"
Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 3
White: 2

Board:
. . . . b . . . . 
. . w b . b . . . 
b b b b . . b b . 
. w b b b b w b . 
w w w b w w w b . 
. w b b w . w b . 
. w b b w w b b . 
. w b . w . w b b 
. w . b w . w w . 
"
`;

exports[`Game context snapshots should render the final position correctly for sgf1 1`] = `
"
Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 19
White: 7

Board:
. . . . . . w b b b . b b b w . w . . 
. . . . . . . w b b b . . b w w . w . 
. . . . . b w w w b b b b w w b w . . 
. . . w w w w b w b . w w b b b w w . 
. w . w b w b b b b . w b . b b w b . 
w . w b b w b w . b . w b w . b b w . 
b w w b w w w w b . b b b . b b b w . 
b b w b b b b b . b w b b b w b w w w 
. b b . . . . b . b w b w w w b b b w 
. . b . . . . b b w w w w . w b b b b 
. . . . . . . . . b w . . b b w w w w 
. b . . . . . . . b w w w . b . w . . 
b . b b . . b b . w b w b b b b b w . 
w b b b b b . b w b b b b w w . w w . 
w w w b w w b b b w w . b w w w w . . 
. . w w . w b w b w w b b w b w . w . 
. . . w . w w w w w b b . b b b w . . 
. . . . . . . . . w w b . . b w w . . 
. . . . . . . . . w b b b b . w . . . 
"
`;

exports[`Game context snapshots should render the final position correctly for sgf2 1`] = `
"
Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 4
White: 6

Board:
. . b . . . . w . . w . . . . . . . . 
. b b b b w w . w w b w w . w . . . . 
. w b w w b w w b b b b b w b w w w . 
. w b w . b b b b . b b w w b b b w w 
. w b w . b . b . b w w w b . . b b b 
. b w w w b w . b w . w b . b . w w . 
. w w w b w w . b w w w b b . . . . . 
w . . w b . . . . b w b . w b b . b b 
b w . w b . . . . . b b . w w . b b w 
b b w w b . . b . . . . b b b b w w w 
. . b b b b b b b b b b w w w b w . . 
b b b . b w b w w w w w . b w w w w . 
b w w w b w w . w . w . . w b b b w w 
w w . w . w . w b b w . . w w b b b w 
. . . . w . w w b . w . . w b . b w w 
. . . w w w b b b . w w . w b . b b b 
. . . . w b . . . b w b w w b . . . . 
. . w . w b . b . b b b w b b . . . . 
. . . w b b . . . . b w w w b . . . . 
"
`;

exports[`Game context snapshots should render the final position correctly for sgf3 1`] = `
"
Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 3
White: 2

Board:
. . . . b . . . . 
. . w b . b . . . 
b b b b . . b b . 
b w b b b b w b . 
w w w b w w w b . 
. w b b w . w b . 
. w b b w w b b . 
. w b w w . w b b 
. w b b w . w w w 
"
`;
